--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "mysql2": "^3.14.1",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.24",
     "zod": "^3.25.46"
   }
 }
