--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,8 +37,28 @@
     "rootDir": "./src",
     /* Specify the root folder within your source files. */
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
-    // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
-    // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+     "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
+     "paths": {
+       "@": ["./index"],
+       "@common": ["common"],
+       "@common/*": ["common/*"],
+       "@config": ["config"],
+       "@config/*": ["config/*"],
+       "@controller": ["controller"],
+       "@controller/*": ["controller/*"],
+       "@dtos": ["dtos"],
+       "@dtos/*": ["dtos/*"],
+       "@gateways": ["gateways"],
+       "@gateways/*": ["gateways/*"],
+       "@middlewares": ["middlewares"],
+       "@middlewares/*": ["middlewares/*"],
+       "@models": ["models"],
+       "@models/*": ["models/*"],
+       "@routes": ["routes"],
+       "@routes/*": ["routes/*"],
+       "@services": ["services"],
+       "@services/*": ["services/*"],
+     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
