setup: Test auto entity creation by typeorm-model-generator

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,8 +52,8 @@
        "@gateways/*": ["gateways/*"],
        "@middlewares": ["middlewares"],
        "@middlewares/*": ["middlewares/*"],
-       "@models": ["models"],
-       "@models/*": ["models/*"],
+       "@entities": ["entities"],
+       "@entities/*": ["entities/*"],
        "@routes": ["routes"],
        "@routes/*": ["routes/*"],
        "@services": ["services"],
