--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/app.js",
     "build": "tsc",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "sync:entities": "ts-node generate-entities.ts"
   },
   "private": true,
   "devDependencies": {
