setup: add logger

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.24",
+    "uuid": "^11.1.0",
     "zod": "^3.25.46"
   }
 }
