--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "mysql2": "^3.14.1",
+    "node-cache": "^5.1.2",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.24",
     "uuid": "^11.1.0",
